@@ -6,6 +6,14 @@
 [[changelog]]
 == Changelog
 
+[[release-next]]
+[float]
+=== Unreleased
+
+ * added a background thread to process the transactions queue every 60 seconds (configurable) ({pull}68[#68])
+
+https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev1\...master[Check the HEAD diff]
+
 [[release-v1.0.0.dev2]]
 [float]
 === v1.0.0.dev2
